--- a/assets/style.css
+++ b/assets/style.css
@@ -152,7 +152,8 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: calc(1.375rem + 1.5vw);
+	line-height: 1.2;
 }
 .quote__author {
 	font-family: Spectral;
